@@ -1,1 +1,1 @@
-echo -n "v0.02"
+echo -n "v0.03"
